log
Thu Apr 21 15:33:36 UTC 2022: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:0:
treemap.c: In function ‘searchTreeMap’:
treemap.c:77:14: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘lower_then’; did you mean ‘lower_than’?
     if(tree->lower_then(key,aux->pair->key)==1){
              ^~~~~~~~~~
              lower_than
treemap.c:81:16: error: ‘TreeMap {aka struct TreeMap}’ has no member named ‘lower_then’; did you mean ‘lower_than’?
       if(tree->lower_then(aux->pair->key,key)==1){
                ^~~~~~~~~~
                lower_than
Compilation failed
e63433c
Thu Apr 21 15:34:12 UTC 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d174542
Thu Apr 21 15:35:20 UTC 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
f253337
